@@ -46,19 +46,20 @@
   <!-- A dir option by itself adds any files found in the directory to the
        classpath, this is useful for including all jars in a directory.
     -->
-  <lib dir="../../contrib/extraction/lib" />
+  <lib dir="./contrib/extraction/lib" />
   <!-- When a regex is specified in addition to a directory, only the files in that
        directory which completely match the regex (anchored on both ends)
        will be included.
     -->
-  <lib dir="../../dist/" regex="apache-solr-cell-\d.*\.jar" />
-  <lib dir="../../dist/" regex="apache-solr-clustering-\d.*\.jar" />
+  <lib dir="./dist/" regex="apache-solr-cell-\d.*\.jar" />
+  <lib dir="./dist/" regex="apache-solr-clustering-\d.*\.jar" />
   <!-- If a dir option (with or without a regex) is used and nothing is found
        that matches, it will be ignored
     -->
-  <lib dir="../../contrib/clustering/lib/downloads/" />
-  <lib dir="../../contrib/clustering/lib/" />
+  <lib dir="./contrib/clustering/lib/downloads/" />
+  <lib dir="./contrib/clustering/lib/" />
   <lib dir="/total/crap/dir/ignored" />
+  <lib dir="./accessFilterPlugin/" />
   <!-- an exact path can be used to specify a specific file.  This will cause
        a serious error to be logged if it can't be loaded.
   <lib path="../a-jar-that-does-not-exist.jar" />
