@@ -1,3 +1,9 @@
+2010-09-15  Markus Goldbach  <markus.goldbach@dkd.de>
+
+	* Changed install script to install the Solr Access Filter Plugin
+	* Added Solr Access Filter Plugin to libs in solrconfig.xml
+	* Changed path to libs in solrconfig.xml
+
 2010-09-14  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added a method to call arbitrary servlets to tx_solr_SolrService
